fix: round on safari

--- a/src/app/shared/kng-audio-note/kng-audio-note.component.scss
+++ b/src/app/shared/kng-audio-note/kng-audio-note.component.scss
@@ -73,6 +73,8 @@
       width: 40px;
       height: 40px;
       margin: 10px;
+      text-align: center;
+      padding: 6px;
       border-radius: 20px;
       border: 1px solid var(--mdc-theme-primary);        
       -webkit-touch-callout:none;
